--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^0.4.9",
     "next": "12.0.7",
+    "notion-client": "^4.11.1",
+    "notion-types": "^4.10.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-notion-x": "^4.11.3",
+    "slugify": "^1.6.3"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
