--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^0.4.9",
+    "@tailwindcss/typography": "^0.4.1",
     "next": "12.0.7",
     "notion-client": "^4.11.1",
     "notion-types": "^4.10.0",
@@ -20,8 +21,11 @@
   "devDependencies": {
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
+    "autoprefixer": "^10.4.0",
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
   }
 }
