--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@notionhq/client": "^0.4.9",
     "@tailwindcss/typography": "^0.4.1",
+    "date-fns": "^2.27.0",
     "next": "12.0.7",
     "notion-client": "^4.11.1",
     "notion-types": "^4.10.0",
