--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "date-fns": "^2.27.0",
     "next": "12.0.7",
+    "next-theme": "^0.1.5",
     "notion-client": "^4.11.1",
     "notion-types": "^4.10.0",
     "react": "17.0.2",
