--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-notion-x": "^4.11.3",
-    "slugify": "^1.6.3"
+    "slugify": "^1.6.3",
+    "use-delayed-render": "^0.0.7"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
