--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@notionhq/client": "^0.4.9",
     "@tailwindcss/typography": "^0.4.1",
+    "cloudinary-build-url": "^0.2.4",
     "date-fns": "^2.27.0",
     "next": "12.0.7",
     "next-theme": "^0.1.5",
@@ -18,7 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-notion-x": "^4.11.3",
+    "react-notion-x": "^4.15.0",
     "slugify": "^1.6.3",
     "use-delayed-render": "^0.0.7"
   },
