--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "use-delayed-render": "^0.0.7"
   },
   "devDependencies": {
+    "@cld-apis/types": "^0.1.6",
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
