--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@notionhq/client": "^0.4.9",
     "@tailwindcss/typography": "^0.4.1",
+    "classnames": "^2.5.1",
     "cloudinary-build-url": "^0.2.4",
     "date-fns": "^2.27.0",
     "next": "14.2.4",
