--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "@notionhq/client": "^0.4.9",
     "@tailwindcss/typography": "^0.4.1",
@@ -26,7 +29,7 @@
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
-    "@types/node": "16.11.11",
+    "@types/node": "20.14.9",
     "@types/react": "17.0.37",
     "autoprefixer": "^10.4.0",
     "eslint": "8.4.0",
